Simplified solution